--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "livewire/livewire": "^2.12",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
